src/test/ui/hrtb/hrtb-conflate-regions.nll.stderr
error: higher-ranked subtype error
  --> $DIR/hrtb-conflate-regions.rs:27:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); }
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/hrtb-conflate-regions.rs:27:10
   |
LL | fn b() { want_foo2::<SomeStruct>(); }
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

